Add sample code warnings

--- a/GeoSCADA.html
+++ b/GeoSCADA.html
@@ -8,6 +8,11 @@ Data is sent into analogue, digital and string Internal Points.
 Supports value and time stamp.
 Does not support: Time points
 
+**********************************************************************
+SAMPLE CODE FOR EDUCATION ONLY. THIS CODE MAY NOT BE CYBER-SECURE.
+YOU ARE RESPONSIBLE FOR IMPLEMENTING CYBER-SECURITY FEATURES.
+**********************************************************************
+
 get object data
 Get object summary data from GeoSCADA using its web service port.
 
